# flagser-laplacian

./: .gitignore  CMakeLists.txt  README.md  _filtrations_0.txt  _filtrations_1.txt  _filtrations_2.txt  build_custom_algorithms.sh  matrix_0  matrix_1  out  profile.csv  real27.o1  requirements.txt
docs/: flagser-laplacian-documentation.tex  flagser-laplacian.bib
include/: algorithms.h  definitions.h  filtration_algorithms.h  parameters.h  parameters_real.h  persistence_real.h  real_persistence.h
include/complex/: directed_flag_complex_computer_real.h  real_directed_flag_complex_computer.h
include/output/: base.h
parser/: math_parser.py
src/: .flagser-laplacian.cpp.swp  flagser-laplacian.cpp
test/laplacian_custom/: 1a99_10.flag  1a99_15.flag  1a99_15_1sigfig.flag  1a99_6.flag  1a99_8_1sigfig.flag  bett1_length2.flag  betti1_length1.flag  c2_and_h2.flag  c3-4.flag  c3-5.flag  c3.flag  cycle_no_bdy.flag  d3-adjusted.flag  d4-adjusted.flag  d4-adjusted2.flag  d4-f11.flag  d4-f12.flag  d4-f13.flag  d4-f15.flag  d4-mwe.flag
test/laplacian_custom/for_PL/: 1a99_4.5.flag  1a99_4.flag  1a99_5.flag  1a99_7.flag  1a99_8.flag  triangle_cycle.flag
